<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_9" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CarCustomiser" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="WOX-0u-lOW">
                                <rect key="frame" x="316" y="185.66666666666666" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="TW8-w9-a2M"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Gbx-Sf-Uta">
                                <rect key="frame" x="316" y="237.66666666666666" width="51" height="30.999999999999972"/>
                                <accessibility key="accessibilityConfiguration" identifier="tyresSwitch"/>
                                <connections>
                                    <action selector="tyresPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="O67-4I-Bbs"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VvZ-to-GtI">
                                <rect key="frame" x="316" y="341.66666666666669" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="washSwitch"/>
                                <connections>
                                    <action selector="washPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="yT8-FW-Hoh"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Engine and Exhaust Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aqi-tb-XDz">
                                <rect key="frame" x="10" y="165.33333333333334" width="311.66666666666669" height="20.333333333333343"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tyres Package (Cost: 500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySK-n7-29a">
                                <rect key="frame" x="10" y="216.66666666666666" width="203.66666666666666" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wash Package (Cost: 200)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jx3-mx-BAM">
                                <rect key="frame" x="10" y="320.66666666666669" width="204" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Electrification Package (Cost: 200)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YCl-Th-0O5">
                                <rect key="frame" x="10" y="268.66666666666669" width="266" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5Lz-Aw-iVk">
                                <rect key="frame" x="316" y="289.66666666666669" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="electricSwitch"/>
                                <connections>
                                    <action selector="electricPackageToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="b05-2J-cef"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining: 30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4aL-fi-ha5">
                                <rect key="frame" x="213" y="54" width="152" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Car Statistics" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gU6-zy-3rI">
                                <rect key="frame" x="100.66666666666667" y="85" width="173.66666666666663" height="20.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" identifier="carStats"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7B-re-sTT">
                                <rect key="frame" x="100.66666666666669" y="115.33333333333331" width="74" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="cycleCarsButtons"/>
                                <state key="normal" title="Cycle Cars"/>
                                <connections>
                                    <action selector="cycleCar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pu7-yu-pqD"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining Funds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSx-55-s9O">
                                <rect key="frame" x="10" y="54" width="131.66666666666666" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="ySK-n7-29a" firstAttribute="top" secondItem="WOX-0u-lOW" secondAttribute="bottom" id="36U-aO-VXM"/>
                            <constraint firstItem="Gbx-Sf-Uta" firstAttribute="top" secondItem="ySK-n7-29a" secondAttribute="bottom" id="6PS-u7-zax"/>
                            <constraint firstItem="YCl-Th-0O5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="816-n4-r1O"/>
                            <constraint firstItem="ySK-n7-29a" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="9bA-Sh-gPP"/>
                            <constraint firstItem="VvZ-to-GtI" firstAttribute="top" secondItem="Jx3-mx-BAM" secondAttribute="bottom" id="PwU-V6-WZG"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Lz-Aw-iVk" secondAttribute="trailing" constant="10" id="Rph-jW-Pwl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WOX-0u-lOW" secondAttribute="trailing" constant="10" id="XH7-mU-dF7"/>
                            <constraint firstItem="YCl-Th-0O5" firstAttribute="top" secondItem="Gbx-Sf-Uta" secondAttribute="bottom" id="ZvU-LN-xqQ"/>
                            <constraint firstItem="gU6-zy-3rI" firstAttribute="top" secondItem="4aL-fi-ha5" secondAttribute="bottom" constant="10" id="brX-3Z-wL1"/>
                            <constraint firstItem="gU6-zy-3rI" firstAttribute="leading" secondItem="q7B-re-sTT" secondAttribute="leading" id="dqx-FF-1K9"/>
                            <constraint firstItem="Aqi-tb-XDz" firstAttribute="top" secondItem="q7B-re-sTT" secondAttribute="bottom" constant="20" id="eme-dw-NUt"/>
                            <constraint firstItem="WOX-0u-lOW" firstAttribute="top" secondItem="Aqi-tb-XDz" secondAttribute="bottom" id="hJN-5w-Kqy"/>
                            <constraint firstItem="4aL-fi-ha5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="ibF-5t-PHD"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4aL-fi-ha5" secondAttribute="trailing" constant="10" id="jzk-Mq-oz7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VvZ-to-GtI" secondAttribute="trailing" constant="10" id="l8y-Tj-zQv"/>
                            <constraint firstItem="Jx3-mx-BAM" firstAttribute="top" secondItem="5Lz-Aw-iVk" secondAttribute="bottom" id="l9M-nu-wNI"/>
                            <constraint firstItem="q7B-re-sTT" firstAttribute="top" secondItem="gU6-zy-3rI" secondAttribute="bottom" constant="10" id="mGR-9a-Uow"/>
                            <constraint firstItem="gU6-zy-3rI" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oew-rU-Tbf"/>
                            <constraint firstItem="Jx3-mx-BAM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="pJQ-sO-hdh"/>
                            <constraint firstItem="oSx-55-s9O" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="sIO-mp-IHB"/>
                            <constraint firstItem="oSx-55-s9O" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="v7f-52-ioq"/>
                            <constraint firstItem="5Lz-Aw-iVk" firstAttribute="top" secondItem="YCl-Th-0O5" secondAttribute="bottom" id="vCY-1S-Mw9"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Gbx-Sf-Uta" secondAttribute="trailing" constant="10" id="yav-bg-xJl"/>
                            <constraint firstItem="Aqi-tb-XDz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="zVD-z1-xlD"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="CarStatistics" destination="gU6-zy-3rI" id="KzC-xb-heg"/>
                        <outlet property="cycleCarsButton" destination="q7B-re-sTT" id="Gfh-gF-22k"/>
                        <outlet property="electricPackage" destination="5Lz-Aw-iVk" id="I8F-5c-Fam"/>
                        <outlet property="engineAndExhaustPackage" destination="WOX-0u-lOW" id="Hhm-TQ-ohG"/>
                        <outlet property="remainingFundsDisplay" destination="oSx-55-s9O" id="BfA-dJ-rqW"/>
                        <outlet property="tyresPackage" destination="Gbx-Sf-Uta" id="MHx-ci-Dib"/>
                        <outlet property="washPackage" destination="VvZ-to-GtI" id="k5V-4I-dB7"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="131.8840579710145" y="80.357142857142847"/>
        </scene>
    </scenes>
</document>
